Fixed bug with forced zooming on mobile search bar

--- a/resources/styles/search_bar.css
+++ b/resources/styles/search_bar.css
@@ -12,18 +12,17 @@
 
 #search-form input {
     z-index: 2;
-    min-height: 25px;
-    padding: 3px 7px;
+    padding: 7px;
     border-radius: 4px;
     border: 1px solid #a0a0a0;
     color: black;
+    font-family: 'Mono Specials', sans-serif;
+    font-size: 16px;
 }
 
 #search-field {
     flex-grow: 1;
     margin-right: 6px;
-    font-family: 'Mono Specials', sans-serif;
-    font-size: 16px;
     background-color: white;
 }
 
@@ -35,7 +34,6 @@
 
 #search-button {
     background-color: #f0f0f0;
-    font-size: 14px;
 }
 
 #search-button:focus {
